# nea-ai-agents

./: .dockerignore  .env.example  Dockerfile  Procfile  README.md  railway.json  requirements.txt
agents/news_aggregator/: database.py
agents/outreach/: context.py  generator.py  prompts.py
agents/talent-placement/: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
agents/talent-placement/data/: job_reqs.csv
agents/talent-placement/src/: app.py  export.py  harmonic.py  matching.py  models.py  portco.py  roster.py  scraper.py  store.py
agents/talent-placement/tests/: test_matching.py
api/py/: outreach-feedback.py
core/: canonical_bridge.py  database.py  prompt_registry.py
core/clients/: harmonic.py
frontend/app/(platform)/outreach/: page.tsx
migrations/: 009_create_outreach_feedback.sql  010_outreach_two_call_split.sql
scripts/: backfill_canonical_ids.py  seed_nea_portfolio.py
services/: api.py  auth.py  feedback.py  history.py  job_manager.py  models.py
tools/: company_tools.py
