[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "talent-placement"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "streamlit",
    "python-dotenv",
    "pydantic",
    "sqlite-utils",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
